ctxmap-tests/tests/compile_fail/unwind.stderr
error[E0277]: the type `&mut CtxMap<main::Schema>` may not be safely transferred across an unwind boundary
   --> tests/compile_fail/unwind.rs:8:13
    |
8   |     let _ = catch_unwind(|| {
    |             ^^^^^^^^^^^^ -- within this `[closure@$DIR/tests/compile_fail/unwind.rs:8:26: 8:28]`
    |             |
    |             `&mut CtxMap<main::Schema>` may not be safely transferred across an unwind boundary
    |
    = help: within `[closure@$DIR/tests/compile_fail/unwind.rs:8:26: 8:28]`, the trait `UnwindSafe` is not implemented for `&mut CtxMap<main::Schema>`
note: required because it's used within this closure
   --> tests/compile_fail/unwind.rs:8:26
    |
8   |     let _ = catch_unwind(|| {
    |                          ^^
note: required by a bound in `catch_unwind`
   --> $RUST/std/src/panic.rs
    |
    | pub fn catch_unwind<F: FnOnce() -> R + UnwindSafe, R>(f: F) -> Result<R> {
    |                                        ^^^^^^^^^^ required by this bound in `catch_unwind`
